css/stylesheet.css
:root {
	color-scheme: dark;

	--light: #FFE4AF;
	--dark: color-mix(in oklab, black, var(--light) 10%);

	/* For Debugging */
	/* --light: white; */
	/* --dark: black; */
	/* --background2: color-mix(in oklab, var(--ref1), var(--ref2) 100%); */

	--ref1: light-dark(var(--light), var(--dark));
	--ref2: light-dark(var(--dark), var(--light));

	--background: color-mix(in oklab, var(--ref1), var(--ref2) 13.314%);
	--foreground: color-mix(in oklab, var(--ref1), var(--ref2) 86.686%);

	--background2: color-mix(in oklab, var(--ref1), var(--ref2) 9.985%);

	--backgroundFinal: linear-gradient(in oklab, var(--background), var(--background2));
	/* --backgroundFinal: var(--background); */
}

.backgroundImg {
	position: relative;
	width: 100%;
	/* max-width: max-content; */
	/* min-height: max-content; */
	width: 100%;
}

.backgroundImg::before {
	content: "";
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;

	background-image: url("https://dragcave.net/image/0xmpe.gif");
	background-size: contain;
	background-position: center;
	background-repeat: no-repeat;
	background-attachment: fixed;
	image-rendering: pixelated;
	opacity: 0.1;
	z-index: -1;
	filter: blur(5px);
}

.main {
	position: relative;
	z-index: 1;
}

.dm-mono-regular {
	font-family: "DM Mono", monospace;
	font-weight: 400;
	font-style: normal;
}

/* header {
	text-align: center;
} */

body {
	font-family: 'DM Mono';
	font-size: 14px;

	padding: 10px;
	/* line-height: 1.3; */

	/* Canvas: 18, CanvasText: 255 */
	/* https://developer.mozilla.org/en-US/docs/Web/CSS/Reference/Values/system-color */
	color: var(--ref2);
	background: var(--backgroundFinal);
	background-repeat: no-repeat;
}

.isDisabled {
	color: color-mix(in oklab, transparent, var(--ref2) 50%);
	cursor: not-allowed;
	text-decoration: none;
	pointer-events: none;
}

textarea {
	width: 95%;
}

form {
	font-weight: bold;
	/* line-height: 1.3; */
}

table {
	border-spacing: 2px;
}

th,
td {
	border-collapse: collapse;
	/* border-collapse: separate; */
	/* border-radius: 5px; */
	background-clip: content-box;
	/* line-height: 1; */

	text-align: center;
	vertical-align: middle;
	/* border: 1px solid var(--background); */
	background: color-mix(in oklab, transparent, var(--foreground) 5%);
	/* backdrop-filter: blur(3px); */
}

th:first-of-type {
	border-top-left-radius: 5px;
}

th:last-of-type {
	border-top-right-radius: 5px;
}

tr:last-of-type td:first-of-type {
	border-bottom-left-radius: 5px;
}

img {
	image-rendering: pixelated;
	image-rendering: -moz-crisp-edges;
	vertical-align: text-bottom;
	margin-top: 1px;
	margin-bottom: 1px;
}

label {
	position: relative;
	left: 5px;

	display: inline-block;
	vertical-align: middle;
}

td {
	text-align: center;
}

input {
	vertical-align: middle;
}

hr {
	border: 1.5px solid var(--ref2);
	width: calc(100% + 20px);
	padding: none;
	position: relative;
	left: -10px;
	border-collapse: collapse;
}

.tooltip {
	position: relative;
	display: inline-block;
}

.tooltip-box {
	position: fixed;
	z-index: 9999;

	backdrop-filter: blur(3px);
	background-color: color-mix(in oklab, transparent, var(--background) 50%);
	padding: 4px;
	border-radius: 5px;
	color: var(--ref2);
	border: 1px solid color-mix(in oklab, transparent, var(--ref2) 50%);
	font-size: 12px;

	width: max-content;
	max-width: calc(100vw - 20px);

	white-space: pre-wrap;
	overflow-wrap: break-word;

	pointer-events: none;
	text-align: left;
	line-height: normal;
}

